tests/doWhile/invalid/Syntax/DO-WHILE_dooErr.wacc
# do typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  doo
    skip
  while false
end
